force-app/main/default/objects/Bot_Command__c/Bot_Command__c.object-meta.xml
<CustomObject>
    <label>Bot Command</label>
    <nameField>
        <label>Command Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Commands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>