force-app/main/default/objects/Bot_Command__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>