force-app/main/default/objects/Bot_Command__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <label>Invocation Pattern</label>
    <length>200</length>
    <type>Text</type>
</CustomField>